Added paddle and collision with it

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     let dy = -2;
     let ballRadius = 10; 
 
-    let paddleHeight = 10;
-    let paddleWidth = 75;
+    let paddleHeight = 15;
+    let paddleWidth = 80;
     let paddleX = (canvas.width - paddleWidth) / 2;
 
     let rightPressed = false;
@@ -36,13 +36,6 @@
       ctx.fillStyle = color; 
       ctx.fill();
       ctx.closePath();
-      if(y + dy > canvas.height - ballRadius || y + dy < ballRadius){
-          dy = -dy;
-          randomColor();
-       } else if(x + dx > canvas.width - ballRadius || x + dx < ballRadius){
-          dx = -dx;
-          randomColor();
-       }
       }
 
       function drawPaddle() {
@@ -68,12 +61,59 @@
      function draw(){
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       drawBall();
+      drawPaddle();
       x += dx;
       y += dy;
+      if(y + dy < ballRadius){
+          dy = -dy;
+          randomColor();
+       } else if(y + dy > canvas.height - ballRadius ){
+           if(x > paddleX && x < paddleX + paddleWidth){
+               dy += 0.5;
+               dy = -dy;
+           }else{
+            alert("GAME OVER");
+            document.location.reload();
+            clearInterval(interval);
+           }
+       }
+        if(x + dx > canvas.width - ballRadius || x + dx < ballRadius){
+          dx = -dx;
+          randomColor();
+       }
+      if(rightPressed) {
+          paddleX += 5;
+           if(paddleX + paddleWidth > canvas.width){
+               paddleX = canvas.width - paddleWidth;
+           }
+      } else if(leftPressed){
+          paddleX -= 5;
+          if(paddleX < 0){
+              paddleX = 0;
+          }
+      }
      }
 
      document.addEventListener("keydown", keyDownHandler,false )
-     setInterval(draw, 10);
+     document.addEventListener("keyup", keyUpHandler, false )
+
+     function keyDownHandler(e){
+         if(e.key == "Right" || e.key == "ArrowRight") {
+              rightPressed = true;
+         }
+         else if(e.key == "Left" || e.key == "ArrowLeft") {
+              leftPressed = true;
+         }
+     }
+
+      function keyUpHandler(e){
+           if(e.key == "Right" || e.key == "ArrowRight") {
+               rightPressed = false;
+           } else if(e.key == "Left" || e.key == "ArrowLeft"){
+               leftPressed = false;
+           }
+      }
+     let interval = setInterval(draw, 10);
      
 </script>
 
