--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
 
      function draw(){
       ctx.clearRect(0, 0, canvas.width, canvas.height);
+      drawBricks();
       drawBall();
       drawPaddle();
+      collisionDetection();
       x += dx;
       y += dy;
       if(y + dy < ballRadius){
@@ -113,6 +115,56 @@
                leftPressed = false;
            }
       }
+
+    let brickRowCount = 3;
+    let brickColumnCount = 5;
+    let brickWidth = 75; 
+    let brickHeight = 20;
+    let brickPadding = 10;
+    let brickOffsetTop = 30; 
+    let brickOffsetLeft = 30;
+    let bricks = [];
+
+    for(let c = 0; c < brickColumnCount; c++){
+        bricks[c] = [];
+         for(let r = 0; r < brickRowCount; r++){
+             bricks[c][r] = { x: 0, y: 0, status : 1};
+         }
+    }
+      
+      function drawBricks() {
+         for(let c = 0; c < brickColumnCount; c++){
+             for(let r = 0; r < brickRowCount; r++){
+                if(bricks[c][r].status == 1) {
+                  let brickX = (c*(brickWidth + brickPadding)) + brickOffsetLeft;
+                  let brickY = (r*(brickHeight + brickPadding)) + brickOffsetTop;
+                  bricks[c][r].x = brickX;
+                  bricks[c][r].y = brickY;
+                  ctx.beginPath();
+                  ctx.rect(brickX, brickY, brickWidth, brickHeight);
+                  ctx.fillstyle = "#0095DD";
+                  ctx.fill();
+                  ctx.closePath();
+                }
+             }
+         }
+    }
+
+      function collisionDetection(){
+          for(let c = 0; c < brickColumnCount; c++){
+              for(let r = 0; r < brickRowCount; r++){
+                  let b = bricks[c][r];
+                  if(b.status == 1){
+                  if(x > b.x && x < b.x + brickWidth && y > b.y && y < b.y + brickHeight){
+                      dy = -dy;
+                      b.status = 0; 
+                      randomColor();
+                    }
+                  }
+              }
+          }
+      }
+
      let interval = setInterval(draw, 10);
      
 </script>
